--- a/index.html
+++ b/index.html
@@ -1,12 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <title>Hotel Maragogi Plaza</title>
 </head>
 <body>
-    
+
+    <main>
+        <section>
+            <div class="menu">
+            <div class="links-menu">
+                <a href="index.html">Hotel Plaza</a>
+                <a href="#sobre">Sobre</a>
+                <a href="#rota">Rota</a>
+                <a href="#">Quartos</a>
+                <a href="#">Restaurantes</a>
+                <a href="#">Reserva</a>
+            </div>
+            <div class="pesquisar">
+                <input class="local-pesquisar" type="text" placeholder="Podemos te ajudar">
+                <button class="botao">Pesquisar</button>
+            </div>
+        </div>
+            <img class="gif1" src="./img/Gifhotel/logogifbemvindo.gif">
+        </section>
+
+        <section>
+            <div id="rota">
+                <h2>ROTA</h2>
+                <p>lorem lorem lorem lorem</p>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126113.85641044397!2d-35.332022935203604!3d-8.966802038731677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7008aacdc3580a9%3A0x7821c44c827ad3cd!2sMaragogi%20-%20State%20of%20Alagoas%2C%2057955-000!5e0!3m2!1sen!2sbr!4v1624913124365!5m2!1sen!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
+        <section>
+            <div id="sobre">
+                <h2>SOBRE A POUSADA</h2>
+                <p>Conheça sobre nossa pousada</p>
+            </div>
+            <div>
+                <h3>A Pousada</h3>
+                <p>lorem lorem loremlorem lorem</p>
+                <img src="./img/img1.jpg"/>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="incio-footer">
+            <h3>Entre em contato conosco através das nossas redes socias:</h3>
+            <i style="margin-left: 0%;"  class="fab fa-instagram icones"></i>
+            <i class="fab fa-facebook-f icones"></i>
+            <i class="fab fa-linkedin-in icones"></i>
+            <i class="fas fa-phone-square-alt icones"></i>
+
+            <a class="booking" href="https://www.booking.com/index.pt-br.html?label=gen173nr-1BCAEoggI46AdIM1gEaCCIAQGYAS24AQfIAQzYAQHoAQGIAgGoAgO4Av7I54YGwAIB0gIkYzFjNmQ4OTctNzM5NS00ZDFjLWEzMTAtYmJjYjM0OWI5MDY52AIF4AIB;sid=4f9c859837f4c62e5199d6d7621b98a6;keep_landing=1&sb_price_type=total&">
+                <p class="booking">Faça sua reserva pelo Booking.com</p>
+            </a>
+        </div>
+        <div>
+            <p class="nomes">Aline Alves | Bruna Leardini | Gabriel Santos | Ricardo com K</p>
+        
+        </div>
+    </footer>
 </body>
 </html>
